--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
 			box-sizing: border-box;
 		}
 
-
 		body {
 			margin: 0 0 64px 0;
 		}
-
 
 		h6 {
 			text-align: center;
 			margin: 16px 0 8px 0;
 		}
-
 
 		#main {
 			max-width: 1050px;
@@ -28,7 +25,6 @@
 			text-align: center;
 		}
 
-
 		#description {
 			margin: 0 auto;
 			display: inline-block;
@@ -36,16 +32,13 @@
 			max-width: 1000px;
 		}
 
-
 		#description dt {
 			text-align: left;
 		}
 
-
 		#description dd {
 			text-align: left;
 		}
-
 
 		#waveform {
 			display: inline-block;
@@ -55,7 +48,6 @@
 			text-align: center;
 		}
 
-
 		#envelopeView {
 			display: inline-block;
 			max-width: 1050px;
@@ -64,16 +56,13 @@
 			text-align: center;
 		}
 
-
 		#envelopeView div {
 			display: inline-block;
 		}
 
-
 		#renderControls {
 			margin-top: 24px;
 		}
-
 
 		canvas {
 			/* image-rendering: pixelated; */
@@ -83,7 +72,6 @@
 			border-color: #627f84;
 		}
 
-
 		input[type="button"] {
 			background-color: #ffffff;
 			border: 2px solid #aaaaaa;
@@ -91,12 +79,10 @@
 			height: 32px;
 		}
 
-
 		input[type="button"]:hover {
 			background-color: #ffffff;
 			border: 2px solid #aaccff;
 		}
-
 
 		.synthControls {
 			display: inline-block;
@@ -105,7 +91,6 @@
 			text-align: left;
 		}
 
-
 		.numberInputLabel {
 			display: inline-block;
 			text-align: right;
@@ -113,13 +98,11 @@
 			margin-right: 10px;
 		}
 
-
 		.numberInputRange {
 			display: inline-block;
 			max-width: 280px;
 			width: 50%;
 		}
-
 
 		.numberInputNumber {
 			display: inline-block;
@@ -127,13 +110,15 @@
 			width: 20%;
 		}
 
+		.pullDownMenu {
+			display: inline-block;
+		}
 
 		.radioButton {
 			display: inline-block;
 			max-width: 1050px;
 			min-width: 512px;
 		}
-
 
 		.radioButtonLabel {
 			display: inline-block;
@@ -142,21 +127,17 @@
 			margin-right: 10px;
 		}
 
-
 		.radioButtonControls {
 			display: inline-block;
 		}
-
 
 		.checkbox {
 			display: inline-block;
 		}
 
-
 		.checkbox input {
 			margin: 0 4px 0 10px;
 		}
-
 
 		#miscControls .checkbox {
 			text-align: center;
