Change "unsupported" text

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </head>
 
 <body>
-	<p id="unsupported">ブラウザが対応していない場合、このテキストが表示されます。</p>
+	<p id="unsupported">ブラウザが対応していない場合、このテキストが消えずに表示されます。</p>
 
 	<script src="resampler.js"></script>
 	<script src="wave.js"></script>
