--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 	<script src="resampler.js"></script>
 	<script src="wave.js"></script>
 	<script src="vec2.js"></script>
+	<script src="rnd.js"></script>
 	<script src="canvas.js"></script>
 	<script src="bezier-easing.js"></script>
 	<script src="envelope.js"></script>
