Add attack envelope based on gaussian function

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 	<script src="wave.js"></script>
 	<script src="vec2.js"></script>
 	<script src="rnd.js"></script>
+	<script src="gaussian.js"></script>
 	<script src="canvas.js"></script>
 	<script src="bezier-easing.js"></script>
 	<script src="envelope.js"></script>
